--- a/src/main/resources/templates/edit-project.html
+++ b/src/main/resources/templates/edit-project.html
@@ -141,9 +141,9 @@
 								<img th:src="'/'+${item1.url}" style="width: 100%;height: 100%;">
 			                </div>
                 
-                <div class="tm-product-img-edit mx-auto" style="margin-top: 20px;">
+               <!--  <div class="tm-product-img-edit mx-auto" style="margin-top: 20px;">
                   <input type="button" data-toggle="modal" data-target="#look_pl" class="btn btn-primary btn-block text-uppercase" value="查看评论(数量)"/>
-                </div>
+                </div> -->
                 
               </div>
               
